# maize

./: .gitignore  Cargo.toml  README.md  riscv64imac-unknown-none-elfsbi.json  run.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
kernel/: Cargo.toml  build.rs  layout.ld
kernel/src/: align.rs  debug.rs  entry.rs  frame.rs  layout.rs  machine.rs  main.rs  page.rs  panic.rs  plat.rs  ptr.rs  sync.rs  table.rs  thread.rs
kernel/src/sbi/: base.rs  legacy.rs  mod.rs  srst.rs
root/: Cargo.toml  build.rs  layout.ld
root/src/: entry.rs  main.rs  panic.rs
root/src/abi/: mod.rs
