# cargo-features = ["per-package-target"]

[package]
name = "kernel"
version = "0.0.0"
edition = "2021"
publish = false
# TODO: once rust-lang/cargo#9451 is fixed we should move to separate custom target(s) for each workspace member
# forced-target

[[bin]]
name = "kernel"
bench = false
test = false

[dependencies]
static_assertions = "1.1.0"
